[gd_scene load_steps=4 format=2]

[ext_resource path="res://Principal/Main.tscn" type="PackedScene" id=1]
[ext_resource path="res://ManejadorEscenas/ManejadorEscenas.gd" type="Script" id=2]
[ext_resource path="res://Transicion/Transicion.tscn" type="PackedScene" id=3]

[node name="ManejadorEscenas" type="Node2D"]
script = ExtResource( 2 )

[node name="EscenaActual" type="Node2D" parent="."]

[node name="Main" parent="EscenaActual" instance=ExtResource( 1 )]
position = Vector2( -3, 11 )

[node name="Transicion" parent="." instance=ExtResource( 3 )]

[connection signal="jugar" from="EscenaActual/Main" to="." method="_on_Main_jugar"]
[connection signal="salir" from="EscenaActual/Main" to="." method="_on_Main_salir"]
[connection signal="transicion" from="Transicion" to="." method="_on_Transicion_transicion"]
